--- a/Bikes.ipynb
+++ b/Bikes.ipynb
@@ -3196,9 +3196,12 @@
         "    model.add(Dense(2, activation='linear'))\n",
         "    model.compile(loss='mean_squared_error', optimizer=optimizer, metrics=['mse'])\n",
         "    return model\n",
-        "\n",
+        "#Hyperband is an optimization algorithm for hyperparameter tuning.\n",
+        "#Its goal is to help you find the best hyperparameters quickly and efficiently,\n",
+        "#especially when training each model is expensive.\n",
         "tuner = kt.Hyperband(build_model, objective='mse', max_epochs=10, factor=3, directory='my_dir', project_name='intro_to_kt')\n",
-        "\n",
+        "#tuner.search() is what actually runs the tuning process — training multiple models\n",
+        "#with different hyperparameters so you can pick the best one.\n",
         "tuner.search(X_train_arr, y_train, epochs=10, validation_split=0.2)"
       ],
       "metadata": {
@@ -3222,6 +3225,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Once the search is complete, you can retrieve the best hyperparameters like this:\n",
         "best_hps = tuner.get_best_hyperparameters(num_trials=1)[0]\n",
         "best_hps.values"
       ],
@@ -3255,6 +3259,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Fills in the hyperparameters (best_hps) that the tuner decided were the best.\n",
+        "#Gives you a fresh compiled Keras model ready to train.\n",
         "model = tuner.hypermodel.build(best_hps)\n",
         "\n",
         "history = model.fit(X_train_arr, y_train, epochs=10, validation_split=0.2, verbose=2)"
